--- a/package.json
+++ b/package.json
@@ -8,18 +8,16 @@
     "test": "test",
     "example": "example"
   },
-  "dependencies": {
-    "stylus": "^0.52.0",
-    "swig": "^1.4.2"
-  },
   "devDependencies": {
+    "stylus": "^0.52.0",
     "babel": "^5.8.23",
     "mime": "^1.3.4",
     "nib": "^1.1.0",
     "react": "^0.13.3",
     "react-remarkable": "^1.1.1",
     "react-tools": "^0.13.3",
-    "remarkable": "^1.6.0"
+    "remarkable": "^1.6.0",
+    "swig": "^1.4.2"
   },
   "scripts": {
     "test": "npm test"
