--- a/example/common/conf/components.json
+++ b/example/common/conf/components.json
@@ -9,9 +9,12 @@
         "name": "Select"
     },
     {
-        "name": "Tab"
+        "name": "Tabs"
     },
     {
         "name": "TextBox"
+    },
+    {
+        "name": "Pager"
     }
 ]
