--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "swig": "^1.4.2"
   },
   "scripts": {
-    "test": "npm test"
+    "test": "npm test",
+    "build-amd": "sh tool/build-amd.sh"
   },
   "repository": {
     "type": "git",
