--- a/bower.json
+++ b/bower.json
@@ -27,8 +27,8 @@
     "example"
   ],
   "dependencies": {
-    "classnames": "~2.1.3",
-    "react": "0.14.0-rc1",
+    "react": "0.14.0",
+    "react-motion": "~0.3.1",
     "underscore": "~1.8.3"
   }
 }
