--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "lodash": "^3.10.1",
     "mime": "^1.3.4",
     "mocha": "^2.2.5",
-    "mocha-jsdom": "^1.0.0",
     "nib": "^1.1.0",
     "react-addons-test-utils": "^0.14.3",
     "react-remarkable": "^1.1.1",
@@ -28,8 +27,8 @@
     "swig": "^1.4.2"
   },
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha test/components --compilers js:babel/register",
-    "coverage": "./node_modules/.bin/babel-node ./node_modules/.bin/isparta cover --report html ./node_modules/.bin/_mocha -- test/components",
+    "test": "NODE_ENV=test ./node_modules/mocha/bin/mocha test/components --compilers js:babel/register --require ./test/setup.js",
+    "coverage": "./node_modules/.bin/babel-node ./node_modules/.bin/isparta cover --report html ./node_modules/.bin/_mocha -- test/components --require ./test/setup.js",
     "lint": "fecs src",
     "build:amd": "sh tool/build-amd.sh"
   },
