删掉多余的文件

--- a/module.conf
+++ b/module.conf
@@ -1,5 +1,48 @@
 {
     "baseUrl": "src",
-    "paths": {},
-    "packages": []
+    "paths": {
+        "react": "../dep/react/react-with-addons",
+        "react-dom": "../dep/react/react-dom",
+        "es6-promise": "../dep/es6-promise/promise",
+        "numen": "../dep/numen/dist",
+        "melon": "../dep/melon/dist",
+        "fetch": "../dep/fetch/fetch",
+        "underscore": "../dep/underscore/underscore",
+        "hljs": "../dep/highlight/src",
+        "react-motion": "../dep/react-motion/build/react-motion"
+    },
+    "packages": [{
+        "name": "ei",
+        "location": "../dep/ei/dist",
+        "main": "main"
+    }],
+    "combine": {
+        "main": {
+            "files": [
+                "common/**",
+                "home/**",
+                "!~react",
+                "!~react-dom",
+                "!~underscore",
+                "!ei/**",
+                "!melon/**",
+                "!~es6-promise",
+                "!numen/**",
+                "!~react-motion"
+            ]
+        },
+        "bundle/inf": {
+            "files": [
+                "react",
+                "react-dom",
+                "underscore",
+                "hljs/**",
+                "ei/**",
+                "melon/**",
+                "es6-promise",
+                "numen/**",
+                "react-motion"
+            ]
+        }
+    }
 }
