添加属性表格；修改构建

--- a/module.conf
+++ b/module.conf
@@ -6,9 +6,8 @@
         "es6-promise": "../dep/es6-promise/promise",
         "numen": "../dep/numen/dist",
         "melon": "../dep/melon/dist",
-        "fetch": "../dep/fetch/fetch",
         "underscore": "../dep/underscore/underscore",
-        "hljs": "../dep/highlight/src",
+        "hljs": "../dep/highlight/highlight.pack",
         "react-motion": "../dep/react-motion/build/react-motion"
     },
     "packages": [{
@@ -19,8 +18,7 @@
     "combine": {
         "main": {
             "files": [
-                "common/**",
-                "home/**",
+                "**",
                 "!~react",
                 "!~react-dom",
                 "!~underscore",
