--- a/module.conf
+++ b/module.conf
@@ -18,10 +18,14 @@
     "combine": {
         "main": {
             "files": [
-                "**",
+                "common/**",
+                "home/**",
+                "components/**",
+                "components/code/**",
                 "!~react",
                 "!~react-dom",
                 "!~underscore",
+                "!~hljs",
                 "!ei/**",
                 "!melon/**",
                 "!~es6-promise",
@@ -34,7 +38,7 @@
                 "react",
                 "react-dom",
                 "underscore",
-                "hljs/**",
+                "hljs",
                 "ei/**",
                 "melon/**",
                 "es6-promise",
