--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
   },
   "devDependencies": {
     "babel": "^5.8.23",
-    "expect": "^1.12.2",
-    "expect-jsx": "^2.0.1",
+    "expect": "^1.13.4",
+    "expect-jsx": "^2.2.2",
     "isparta": "^3.5.3",
     "jsdom": "^7.2.2",
     "lodash": "^3.10.1",
     "mime": "^1.3.4",
-    "mocha": "^2.2.5",
+    "mocha": "^2.3.4",
     "nib": "^1.1.0",
-    "react-addons-test-utils": "^0.14.3",
+    "react-addons-test-utils": "^0.14.6",
     "react-remarkable": "^1.1.1",
     "react-tap-event-plugin": "^0.2.1",
     "react-tools": "^0.13.3",
@@ -59,9 +59,9 @@
     "dependencies": {}
   },
   "dependencies": {
-    "react": "0.14.3",
-    "react-dom": "^0.14.3",
-    "react-motion": "~0.3.1",
+    "react": "^0.14.6",
+    "react-dom": "^0.14.6",
+    "react-motion": "^0.3.1",
     "underscore": "~1.8.3"
   }
 }
