--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,3 @@
 {
-    "presets": ["es2015-loose", "react", "stage-1"],
-    "plugins": [
-        "external-helpers",
-        "transform-es2015-modules-umd",
-        "transform-es3-property-literals",
-        "transform-es3-member-expression-literals"
-    ]
+    "presets": ["es2015-loose", "react", "stage-1"]
 }
