--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,7 @@
     "example"
   ],
   "dependencies": {
-    "react": "0.14.0",
-    "react-motion": "~0.3.1"
+    "react": "^15.0.1",
+    "react-motion": "https://npmcdn.com/react-motion/bower.zip#^0.4.2"
   }
 }
