--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "example": "example"
   },
   "devDependencies": {
+    "babel-cli": "^6.7.5",
     "babel-core": "^6.7.2",
     "babel-plugin-external-helpers": "^6.5.0",
     "babel-plugin-transform-es2015-modules-umd": "^6.6.5",
@@ -20,8 +21,8 @@
     "babel-preset-stage-1": "^6.5.0",
     "expect": "^1.12.2",
     "expect-jsx": "^2.0.1",
-    "isparta": "^3.5.3",
-    "jsdom": "^7.2.1",
+    "isparta": "^4.0.0",
+    "jsdom": "^8.4.0",
     "lodash": "^3.10.1",
     "mime": "^1.3.4",
     "mocha": "^2.2.5",
@@ -66,6 +67,6 @@
   "dependencies": {
     "react": "^0.14.8",
     "react-dom": "0.14.7",
-    "react-motion": "~0.3.1"
+    "react-motion": "^0.4.2"
   }
 }
