升级melon到最新版

--- a/module.conf
+++ b/module.conf
@@ -21,6 +21,7 @@
                 "common/**",
                 "home/**",
                 "components/**",
+                "style/**",
                 "components/code/**",
                 "!~react",
                 "!~react-dom",
