--- a/package.json
+++ b/package.json
@@ -16,9 +16,18 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "babel": "^5.8.23",
+    "babel-core": "^6.7.2",
+    "babel-plugin-external-helpers": "^6.5.0",
+    "babel-plugin-transform-es2015-modules-umd": "^6.6.5",
+    "babel-plugin-transform-es3-member-expression-literals": "^6.5.0",
+    "babel-plugin-transform-es3-property-literals": "^6.5.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-es2015-loose": "^7.0.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-1": "^6.5.0",
     "nib": "^1.1.0",
-    "stylus": "^0.52.4"
+    "stylus": "^0.54.2",
+    "swig": "^1.4.2"
   },
   "author": "",
   "repository": "empty",
