修复 react-motion 在 bower 上不好用的问题

--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,6 @@
   ],
   "dependencies": {
     "react": "^0.14.8",
-    "react-motion": "^0.4.2"
+    "react-motion": "https://npmcdn.com/react-motion/bower.zip"
   }
 }
