--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "swig": "^1.4.2"
   },
   "scripts": {
-    "test": "NODE_ENV=test ./node_modules/mocha/bin/mocha test/components --compilers js:babel-core/register --require ./test/setup.js",
-    "coverage": "./node_modules/.bin/babel-node ./node_modules/.bin/isparta cover --report html ./node_modules/.bin/_mocha -- test/components --require ./test/setup.js",
+    "test": "NODE_ENV=test ./node_modules/mocha/bin/mocha test/components/** --compilers js:babel-core/register --require ./test/setup.js",
+    "coverage": "./node_modules/.bin/babel-node ./node_modules/.bin/isparta cover --report html ./node_modules/.bin/_mocha -- test/components/** --require ./test/setup.js",
     "lint": "fecs src",
     "build": "sh tool/build.sh"
   },
