--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lodash": "^3.10.1",
     "mime": "^1.3.4",
     "mocha": "^2.2.5",
+    "moment": "^2.13.0",
     "nib": "^1.1.0",
     "react-addons-test-utils": "^0.14.3",
     "stylus": "^0.54.2",
