--- a/module.conf
+++ b/module.conf
@@ -8,7 +8,8 @@
         "melon": "../dep/melon/dist",
         "underscore": "../dep/underscore/underscore",
         "hljs": "../dep/highlight/highlight.pack",
-        "react-motion": "../dep/react-motion/build/react-motion"
+        "react-motion": "../dep/react-motion/build/react-motion",
+        "moment": "../dep/moment/moment"
     },
     "packages": [{
         "name": "ei",
@@ -31,7 +32,8 @@
                 "!melon/**",
                 "!~es6-promise",
                 "!numen/**",
-                "!~react-motion"
+                "!~react-motion",
+                "!~moment"
             ]
         },
         "bundle/inf": {
@@ -44,7 +46,8 @@
                 "melon/**",
                 "es6-promise",
                 "numen/**",
-                "react-motion"
+                "react-motion",
+                "moment"
             ]
         }
     }
