--- a/module.conf
+++ b/module.conf
@@ -20,6 +20,7 @@
         "main": {
             "files": [
                 "common/**",
+                "common/conf/properties/**",
                 "home/**",
                 "components/**",
                 "style/**",
