--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
     - "4.2.2"
 install:
-    - npm install
+    - npm install npm@3 -g && npm -v && npm install
 script:
     - npm run test
 after_script:
