--- a/package.json
+++ b/package.json
@@ -25,14 +25,16 @@
     "coveralls": "^2.11.9",
     "expect": "^1.12.2",
     "expect-jsx": "^2.0.1",
+    "jasmine-core": "^2.4.1",
+    "jasmine-expect-jsx": "^1.1.2",
     "karma": "^1.1.0",
     "karma-browserify": "^5.0.5",
     "karma-chrome-launcher": "^1.0.1",
     "karma-coverage": "^1.0.0",
-    "karma-firefox-launcher": "^1.0.0",
+    "karma-jasmine": "^1.0.2",
     "karma-mocha": "^1.1.1",
     "karma-mocha-reporter": "^2.0.4",
-    "karma-phantomjs-launcher": "^1.0.1",
+    "karma-sauce-launcher": "^1.0.0",
     "lodash": "^3.10.1",
     "mocha": "^2.2.5",
     "nib": "^1.1.0",
@@ -41,9 +43,9 @@
     "watchify": "^3.7.0"
   },
   "scripts": {
-    "test": "NODE_ENV=test ./node_modules/.bin/karma start",
+    "test": "./node_modules/.bin/karma start ./tool/karma.conf.js",
+    "test-ci": "./node_modules/.bin/karma start ./tool/karma.ci.conf.js",
     "coveralls": "cat ./coverage/lcov/lcov.info | ./node_modules/.bin/coveralls",
-    "test:local": "./node_modules/.bin/karma start",
     "lint": "fecs src",
     "build": "sh tool/build.sh"
   },
@@ -70,11 +72,11 @@
     "depDir": "dep",
     "srcDir": "src",
     "loaderAutoConfig": "js,htm,html,tpl,vm,phtml",
-    "loaderUrl": "http://s1.bdstatic.com/r/www/cache/ecom/esl/1-8-2/esl.js",
+    "loaderUrl": "http://s1.bdstatic.com/r/www/cache/ecom/esl/2-1-4/esl.js",
     "dependencies": {}
   },
   "dependencies": {
-    "melon-core": "^0.3.1",
+    "melon-core": "^0.3.2",
     "react": "^0.14.8",
     "react-dom": "0.14.8",
     "react-motion": "^0.4.2"
