fix coveralls report position

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "setup": "rimraf asset && NODE_ENV=production webpack --config=tools/webpack.dll.js",
     "test": "NODE_ENV=test karma start ./test/karma.local.conf.js",
     "test-ci": "NODE_ENV=test karma start ./test/karma.ci.conf.js",
-    "coveralls": "cat ./coverage/lcov/lcov.info | ./node_modules/.bin/coveralls"
+    "coveralls": "cat ./test/coverage/lcov/lcov.info | ./node_modules/.bin/coveralls"
   },
   "directories": {
     "doc": "doc",
