--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "clean": "rimraf output"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "ei": "^1.3.10",
     "es6-promise": "^4.0.5",
     "file-loader": "^0.10.0",
     "melon": "^0.5.4",
     "melon-calendar": "^1.0.5",
+    "melon-colorpicker": "^1.2.0",
+    "melon-fab": "^1.0.1",
     "melon-timepicker": "^1.1.5",
     "numen": "^0.2.1",
     "react": "^15.4.2",
