--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "es6-promise": "^4.0.5",
     "file-loader": "^0.10.0",
     "melon": "^0.5.4",
+    "melon-autocomplete": "^1.0.0",
     "melon-calendar": "^1.0.5",
     "melon-colorpicker": "^1.2.0",
     "melon-fab": "^1.0.1",
