--- a/package.json
+++ b/package.json
@@ -96,7 +96,8 @@
     "melon-core": "^0.4.1",
     "react": "^0.14.8||^15.4.0",
     "react-dom": "^0.14.8||^15.4.0",
-    "react-motion": "^0.4.2"
+    "react-motion": "^0.4.2",
+    "react-sticky-state": "^2.1.5"
   },
   "babel": {
     "env": {
