--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-2": "^6.13.0",
+    "connect-history-api-fallback": "^1.3.0",
     "coveralls": "^2.11.12",
     "css-loader": "^0.24.0",
     "enzyme": "^2.6.0",
@@ -63,13 +64,15 @@
     "nib": "^1.1.2",
     "numen": "^0.2.0",
     "react-addons-test-utils": "^0.14.8||^15.4.0",
+    "react-hot-loader": "^1.3.1",
     "rimraf": "^2.5.4",
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.3.1",
     "watchify": "^3.7.0",
     "webpack": "^1.13.1",
-    "webpack-dev-middleware": "^1.8.3"
+    "webpack-dev-middleware": "^1.8.3",
+    "webpack-hot-middleware": "^2.18.0"
   },
   "repository": {
     "type": "git",
