--- a/package.json
+++ b/package.json
@@ -100,7 +100,8 @@
     "react": "^0.14.8||^15.4.0",
     "react-dom": "^0.14.8||^15.4.0",
     "react-motion": "^0.4.2",
-    "react-sticky-state": "^2.1.5"
+    "react-sticky-state": "^2.1.5",
+    "tinycolor2": "^1.4.1"
   },
   "babel": {
     "env": {
