添加文档基础

--- a/.fecsrc
+++ b/.fecsrc
@@ -10,7 +10,8 @@
                     "pragma": "React"
                 }
             ],
-            "fecs-no-require": -1
+            "fecs-no-require": -1,
+            "fecs-prefer-class": -1
         }
     },
     "files": ["src"]
