添加文档构建
1. 把 highlight.js 替换成 prismjs
2. 添加 bundle analyzer

--- a/.babelrc
+++ b/.babelrc
@@ -35,6 +35,9 @@
                 ],
                 "stage-2",
                 "react"
+            ],
+            "plugins": [
+                "transform-decorators-legacy"
             ]
         }
     }
