--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "NODE_ENV=dev webpack-dev-server --config tools/webpack.dev.js",
     "build": "rimraf lib && NODE_ENV=production gulp build",
+    "build-doc": "rimraf publich && NODE_ENV=production webpack --config tools/webpack.doc.js",
     "lint": "fecs",
     "test": "NODE_ENV=test karma start ./test/karma.local.conf.js",
     "test-ci": "NODE_ENV=test karma start ./test/karma.ci.conf.js",
@@ -33,12 +34,12 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "fecs": "^0.8.6",
     "file-loader": "^0.11.2",
+    "github-markdown-css": "^2.8.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-babel-external-helpers": "^2.0.2",
     "gulp-clean": "^0.3.2",
     "gulp-sourcemaps": "^1.6.0",
-    "highlight.js": "^9.12.0",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.30.1",
     "jasmine": "^2.4.1",
@@ -55,9 +56,12 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.8.0",
     "lodash-decorators": "^4.4.0",
+    "lodash.camelcase": "^4.3.0",
     "lodash.unescape": "^4.0.1",
     "nib": "^1.1.2",
     "numen": "^0.2.0",
+    "prism-theme-one-dark": "^1.0.0",
+    "prismjs": "^1.6.0",
     "rct-md-loader": "^1.0.0",
     "react": "^15.5.4",
     "react-addons-test-utils": "^0.14.8||^15.4.0",
@@ -68,8 +72,7 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^2.3.1",
     "webpack": "^3.4.1",
-    "github-markdown-css": "^2.8.0",
-    "lodash.camelcase": "^4.3.0",
+    "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.6.1"
   },
   "repository": {
