添加 Avatar 和 Card 的各种部件；AppBar 现在是 sticky 的了

--- a/.fecsrc
+++ b/.fecsrc
@@ -11,7 +11,8 @@
                 }
             ],
             "fecs-no-require": -1,
-            "fecs-prefer-class": -1
+            "fecs-prefer-class": -1,
+            "fecs-valid-class-jsdoc": -1
         }
     },
     "files": ["src"]
