--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "react": "^0.14.8||^15.4.0",
     "react-dom": "^0.14.8||^15.4.0",
     "react-motion": "^0.4.2",
-    "react-sticky-state": "^2.1.5"
+    "react-sticky-state": "^2.1.5",
+    "roboto-fontface": "^0.8.0"
   }
 }
