--- a/.fecsrc
+++ b/.fecsrc
@@ -12,7 +12,8 @@
             ],
             "fecs-no-require": -1,
             "fecs-prefer-class": -1,
-            "fecs-valid-class-jsdoc": -1
+            "fecs-valid-class-jsdoc": -1,
+            "fecs-min-vars-per-destructure": -1
         }
     },
     "files": ["src"]
