--- a/package.json
+++ b/package.json
@@ -106,8 +106,9 @@
     "prop-types": "^15.5.10",
     "react": "^0.14.8||^15.4.0",
     "react-dom": "^0.14.8||^15.4.0",
-    "react-motion": "^0.4.2",
+    "react-motion": "^0.5.0",
     "react-sticky-state": "^2.1.5",
+    "react-transition-group": "^2.2.0",
     "roboto-fontface": "^0.8.0"
   }
 }
