--- a/package.json
+++ b/package.json
@@ -69,8 +69,8 @@
     "url": "git+https://github.com/react-melon/melon.git"
   },
   "peerDependencies": {
-    "react": "^15.6.2||^16.0.0",
-    "react-dom": "^15.6.2||^16.0.0"
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
   },
   "keywords": [
     "react",
@@ -86,8 +86,8 @@
   "dependencies": {
     "dom-align": "^1.5.3",
     "lodash.omit": "^4.5.0",
-    "melon-core": "^0.5.2",
+    "melon-core": "^0.6.0-0",
     "prop-types": "^15.5.10",
-    "react-motion": "^0.4.2"
+    "react-motion": "^0.5.2"
   }
 }
